# cortex-protocols

./: CODE_OF_CONDUCT.md  README.md
.github/workflows/: backend.yml  contract-deploy.yml  contract.yml  frontend.yml
backend/: README.md  eslint.config.js  jest.config.js  package-lock.json  package.json
backend/src/: app.js  index.js
backend/src/__tests__/: agents.test.js  assets.test.js  globalSetup.js  globalTeardown.js  listAsset.test.js  streams.test.js
backend/src/config/: stellar.js
backend/src/db/: connection.js  migrate.js  seed.js
backend/src/listeners/: eventListener.js
backend/src/middleware/: asyncHandler.js  requireAdmin.js
backend/src/repositories/: agentRepository.js  assetRepository.js  eventLogRepository.js  licenseRepository.js  repoUtils.js  reportRepository.js  streamRepository.js
backend/src/routes/: agents.js  assets.js  internal.js  stellar.js  streams.js
backend/src/services/: agentService.js  assetService.js  licenseService.js  listingService.js  stellarService.js  (+2 more)
contract/: .gitignore  README.md
contract/contracts/marketplace/: Cargo.toml
contract/contracts/marketplace/src/: errors.rs  lib.rs  test.rs
contract/deploy/: .env.example  package.json  tsconfig.json
contract/fuzz/: .gitignore  Cargo.toml  README.md
contract/fuzz/fuzz_targets/: list_asset.rs  open_stream.rs  publish_update.rs  purchase_license.rs
contract/monitoring/: alerting.ts  healthCheck.ts
contract/scripts/: deploy.sh  fund_accounts.sh  init.sh  verify.sh
frontend/: README.md  package-lock.json  package.json  postcss.config.mjs
(+53 files in other folders)
