[package]
name = "marketplace"
version = "0.1.0"
edition = "2021"
rust-version = "1.84"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true, features = ["alloc"] }

[dev-dependencies]
ed25519-dalek = "=2.2.0"
soroban-sdk = { workspace = true, features = ["testutils"] }
